# jun-screen-mirror

./: .gitattributes  .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
apps/macos/: Package.resolved  Package.swift
apps/macos/Sources/CScreenBridge/: module.modulemap  shim.h
apps/macos/Sources/ScreenBridgeApp/: AudioLoopback.swift  DisplayCapturer.swift  DisplaySink.swift  LatencyStats.swift  R1Probe.swift  ScreenBridgeApp.swift  VideoEncoder.swift
apps/macos/Tests/ScreenBridgeCoreTests/: PingTests.swift
apps/windows/: ScreenBridge.sln
apps/windows/ScreenBridge/: App.xaml  App.xaml.cs  DesktopDuplicator.cs  H264Decoder.cs  H264HardwareEncoder.cs  MainWindow.xaml  MainWindow.xaml.cs  R1ProbeWindow.cs  ScreenBridge.csproj  Win32Interop.cs  WindowsAudioLoopback.cs  app.manifest
apps/windows/ScreenBridge.Interop/: NativeMethods.cs  ScreenBridge.Interop.csproj
apps/windows/ScreenBridge.Interop.Tests/: PingTests.cs  ScreenBridge.Interop.Tests.csproj
core/: Cargo.toml
core/crates/discovery/: Cargo.toml
core/crates/discovery/src/: lib.rs
core/crates/ffi/: Cargo.toml  build.rs  cbindgen.toml
core/crates/ffi/src/: lib.rs
core/crates/protocol/: Cargo.toml
core/crates/protocol/src/: lib.rs
core/crates/security/: Cargo.toml
core/crates/security/src/: lib.rs
core/crates/session/: Cargo.toml
core/crates/session/src/: lib.rs
core/crates/transport/: Cargo.toml
core/crates/transport/src/: lib.rs
docs/: architecture.md  build.md  protocol.md  r1-verification.md  security-model.md
include/: screenbridge.h
scripts/: build-core.sh  build-macos.sh  test-interop.sh
