[package]
name = "screenbridge-protocol"
description = "Shared wire-protocol constants and message types for ScreenBridge (PLAN.md §6)."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "screenbridge_protocol"

[lints]
workspace = true
